[package]
name = "ducktrace-logger"
version = "0.1.3"
authors = ["QuackHack-McBlindy"]
license = "MIT"
description = "A duck‑themed application logging system for Rust"
repository = "https://github.com/QuackHack-McBlindy/ducktrace-logger"
readme = "README.md"
keywords = ["logging", "duck", "logger"]
categories = ["development-tools::debugging"]
edition = "2024"

[dependencies]
chrono = "0.4"
colored = "2"

